Fix wrong colors

--- a/components/Header/header.scss
+++ b/components/Header/header.scss
@@ -2,7 +2,7 @@
   &--default {
     width: 100%;
     height: 50px;
-    background-color: var(--color-shade-2);
+    background-color: var(--color-shade-0);
 
     .header--desktop {
       display: none;
@@ -24,7 +24,7 @@
         height: 10px;
         padding: 20px;
         border-radius: 50%;
-        color: var(--color-shade-1);
+        color: var(--color-shade-0);
         z-index: 1000;
 
         svg {
@@ -119,7 +119,7 @@
         .time {
           font-weight: lighter;
           font-size: var(--font-size-2xs);
-          color: var(--color-shade-4);
+          color: var(--color-shade-8);
         }
       }
 
